# angee

./: .dockerignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.cli  Dockerfile.operator  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  pyproject.toml  tools.go
.agents/agents/: go-code-reviewer.md
.agents/notes/: todo.md
.agents/plans/: LATEST.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
api/: types.go  types_test.go
cli/: add.go  agent.go  build.go  chat.go  client.go  compile.go  connect.go  credential.go  deploy.go  destroy.go  dev.go  doctor.go  fixtures.go  init.go  init_runtime.go  logs.go  ls.go  migrate.go  operator.go  operator_bootstrap.go  plan.go  project.go  provision.go  pull.go  remove.go  restart.go  rollback.go  root.go  stack.go  up.go  update.go  workspace.go
cmd/angee/: main.go
cmd/operator/: main.go
cmd/schema/: main.go
deferred/: README.md
deferred/operator-surface-cleanup/: README.md  (+4 more)
docs/: .gitignore  .graphqlrc.yml  ANGEE_SPEC.md  API.md  ARCHITECTURE.md  COMMANDS.md  COMPONENT_SPEC.md  DEFERRED.md  DEVELOPMENT.md  EXAMPLES.md  IDEAS.md  IMPLEMENTATION_PLAN.md  MANIFEST.md  MCP.md  OPERATOR-API.md  OPERATOR.md  OVERVIEW-v2.md  OVERVIEW.md  PLAN.md  README.bak  README.md  REFACTOR.md  RUNTIMES.md  TEMPLATES.md  USAGE.md  angee.schema.json  index.md  package-lock.json  package.json
new/: Makefile  PLAN.md  README.md  go.mod  go.sum
refactor/: OVERVIEW-v2.md  OVERVIEW.md  PLAN.md
scripts/: install.sh
(+221 files in other folders)
